--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -16,7 +16,7 @@ body {
 .form-container {
     width: 100%;
     max-width: 420px;
-    margin: 20px auto;
+    margin:  auto;
     background-color: #ffffff;
     padding: 40px;
     border-radius: 16px;
@@ -46,9 +46,19 @@ body {
 }
 
 @keyframes shake {
-    0%, 100% { transform: translateX(0); }
-    25% { transform: translateX(-5px); }
-    75% { transform: translateX(5px); }
+
+    0%,
+    100% {
+        transform: translateX(0);
+    }
+
+    25% {
+        transform: translateX(-5px);
+    }
+
+    75% {
+        transform: translateX(5px);
+    }
 }
 
 /* FORM  */
@@ -130,9 +140,9 @@ body {
 .modal-content {
     background: #fff;
     width: 100%;
-    max-width: 400px;
-    padding: 35px;
-    border-radius: 20px;
+max-width: 450px;
+    padding: 26px;
+        border-radius: 20px;
     position: relative;
     box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25);
     display: flex;
@@ -141,8 +151,15 @@ body {
 }
 
 @keyframes modalPop {
-    from { opacity: 0; transform: scale(0.9); }
-    to { opacity: 1; transform: scale(1); }
+    from {
+        opacity: 0;
+        transform: scale(0.9);
+    }
+
+    to {
+        opacity: 1;
+        transform: scale(1);
+    }
 }
 
 .close {
