--- a/public/assets/css/subscription.css
+++ b/public/assets/css/subscription.css
@@ -187,7 +187,7 @@ body {
     padding: 20px;
     max-width: 500px;
     border-radius: 8px;
-    margin-bottom: 25px;
+    margin: 25px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
 }
 
