--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -141,14 +141,13 @@ body {
     background: #fff;
     width: 100%;
     max-width: 450px;
-    padding: 26px;
+    padding: 40px;
     border-radius: 20px;
     position: relative;
     box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25);
     display: flex;
     flex-direction: column;
-    gap: 18px;
-}
+    gap: 10px;}
 
 @keyframes modalPop {
     from {
